Remove native text and FST index support (#17998)
* Remove native text index support

* Remove TEXT_CONTAINS support

* Clean up remaining native text references

* Remove native FST index support

* Remove Pinot-local Lucene FST helpers

* Remove legacy native FST config values

* Ignore legacy text fstType config

* Fix native index cleanup review feedback and CI

* Address PR review feedback: remove dead code and simplify cleanup

- Remove unused findNativeTextIndexIndexFile() from SegmentDirectoryPaths
- Combine contains+remove into single remove() in FSTIndexHandler
- Replace cleanupTextIndexFiles() with segmentWriter.removeIndex() for
  managed indexes; keep targeted deletion only for legacy .nativetext.idx
- Make LEGACY_NATIVE_FST_MAGIC private (only used internally)
- Remove dead compatibility tests (newNativeTypeIsIgnored, etc.)
- Clean up unused imports

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>

* Remove dead compatibility tests for removed JSON fields

Remove withLegacyLuceneTypeIgnored, withLegacyNativeTypeIgnored from
FstIndexConfigTest and withLegacyNativeFstTypeIgnored from
TextIndexConfigTest. These only verified that Jackson ignores unknown
JSON properties and did not exercise any live Pinot behavior.

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>

* Simplify legacy index cleanup by reordering remove-then-fetch

Remove legacy native indexes before fetching existingColumns so they
no longer appear in the set. This eliminates the need for the
legacyNativeColumns guard in FSTIndexHandler and the
recreatedLegacyNativeColumns tracking in TextIndexHandler.

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>

* Remove redundant deleteLegacyNativeTextIndexFiles and simplify marker

- Remove deleteLegacyNativeTextIndexFiles since segmentWriter.removeIndex()
  already calls TextIndexUtils.cleanupTextIndex() which handles native files
- Remove dead conditional inProgress marker block — the ma